# pdf-to-markdown

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  github_release.sh  install.sh  rustfmt.toml
.github/workflows/: release.yml
pdf-to-markdown/: Cargo.toml  README.md  rustfmt.toml
pdf-to-markdown/src/: converter.rs  lib.rs  main.rs  utils.rs
pdf-to-markdown/src/provider/: mod.rs  traits.rs
pdf-to-markdown/src/provider/paddleocr/: api.rs  mod.rs  models.rs
pdf-to-markdown/src/provider/zhipu/: api.rs  mod.rs
src/: cache.rs  converter.rs  lib.rs  main.rs  utils.rs
src/provider/: mod.rs  traits.rs
src/provider/paddleocr/: api.rs  mod.rs  models.rs
src/provider/zhipu/: mod.rs  models.rs
