[package]
name = "pdf-to-markdown"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
directories = "5.0"
indicatif = "0.17"
lopdf = "0.40"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.10"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "fs"] }
walkdir = "2.5"
zip = "2.1"

[[bin]]
name = "pdf-to-markdown"
path = "src/main.rs"

[lib]
name = "pdf_to_markdown"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
