[package]
name = "pdf-to-markdown"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
lopdf = "0.40"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.5"
zip = "2.1"

[[bin]]
name = "pdf-to-markdown"
path = "src/main.rs"

[lib]
name = "pdf_to_markdown"
path = "src/lib.rs"
